<?xml version="1.0"?>
<package format="2">
    <name>surfelmeshing_ros</name>
    <version>0.0.0</version>
    <description>SurfelMeshing ROS interface</description>
    <maintainer email="jonasgerstner@todo.todo">jonasgerstner</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <build_depend>eigen_catkin</build_depend>
    <depend>cv_bridge</depend>
    <depend>libvis</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_eigen</depend>
    <depend>mesh_msgs</depend>
</package>